Fixed image extension

--- a/_posts/2022-06-09-egu22.md
+++ b/_posts/2022-06-09-egu22.md
@@ -11,7 +11,7 @@ tags:
 ---
 
 During the 2022 EGU General Assembly I was able to (virtually...) present the results from my first year (and a half...) of PhD.\\
-<a href="https://doi.org/10.5194/egusphere-egu22-2673" rel="some text">![EGU22 Abstract Title](/assets/img/egu22.png "EGU22 Abstract Title")</a>
+<a href="https://doi.org/10.5194/egusphere-egu22-2673" rel="some text">![EGU22 Abstract Title](/assets/img/egu22.PNG "EGU22 Abstract Title")</a>
 
 ---
 
