Added "Presentation" to the title

--- a/_posts/2022-06-09-egu22.md
+++ b/_posts/2022-06-09-egu22.md
@@ -1,5 +1,5 @@
 ---
-title: "EGU General Assembly 2022"
+title: "EGU General Assembly 2022 - Presentation"
 share: false
 related: false
 last_modified_at: 2022-06-09T17:45:00
