--- a/_posts/2022-06-09-egu22.md
+++ b/_posts/2022-06-09-egu22.md
@@ -22,7 +22,7 @@ The station information available in real-time are exploited using a machine lea
 ---
 
 The abstract of the presentation  is available [here](https://doi.org/10.5194/egusphere-egu22-2673).\\
-I plan to upload the presentation in the next few days.\\
+The presentation is available [here](https://sffornasari.github.io/presentations/egu22/).\\
 **A paper about this work is currently under review at BSSA!**
 
 
